k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplesite
spec:
  selector:
    app: simplesite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
